@@ -53,14 +53,14 @@
         </dependency>
 
         <!-- test javafx with TextFX -->
-		<dependency>
-			<groupId>org.testfx</groupId>
-			<artifactId>testfx-core</artifactId>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
             <scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.testfx</groupId>
-			<artifactId>testfx-junit5</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
@@ -73,47 +73,57 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.3.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot</artifactId>
-            <version>3.1.5</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>gr2307.workoutplanner</groupId>
-            <artifactId>restapi</artifactId>
-            <version>3.0.0</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
-
-<!--    <profiles>-->
-<!--        <profile>-->
-<!--            <id>headless</id>-->
-<!--            <properties>-->
-<!--                <headlessTests>true</headlessTests>-->
-<!--            </properties>-->
-<!--            <dependencies>-->
-<!--                &lt;!&ndash; https://mvnrepository.com/artifact/org.testfx/openjfx-monocle &ndash;&gt;-->
-<!--                <dependency>-->
-<!--                    <groupId>org.testfx</groupId>-->
-<!--                    <artifactId>openjfx-monocle</artifactId>-->
-<!--                    <version>jdk-12.0.1+2</version>-->
-<!--                    <scope>test</scope>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--        </profile>-->
-<!--    </profiles>-->
 
     <build>
         <plugins>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>0.0.8</version>
+                    <configuration>
+                        <!-- syntax: module-name/full-app-class-name -->
+                        <mainClass>workoutplanner.ui/workoutplanner.ui.WorkoutPlannerApp</mainClass>
+                        <!-- rest of options are for jlink -->
+                        <compress>2</compress>
+                        <noHeaderFiles>true</noHeaderFiles>
+                        <stripDebug>true</stripDebug>
+                        <noManPages>true</noManPages>
+                        <launcher>workoutplannerfx</launcher>
+                        <jlinkImageName>workoutplannerfx</jlinkImageName>
+                        <jlinkZipName>workoutplannerfx</jlinkZipName>
+
+                    </configuration>
+                </plugin>
+
+                <!-- config above and below taken from https://dev.to/cherrychain/javafx-jlink-and-jpackage-h9 -->
+                <plugin>
+                    <groupId>org.panteleyev</groupId>
+                    <artifactId>jpackage-maven-plugin</artifactId>
+                    <version>1.6.0</version>
+                    <configuration>
+                        <name>WorkoutplannerFX</name>
+                        <appVersion>1.0.0</appVersion>
+                        <vendor>gr2307</vendor>
+                        <destination>target/dist</destination>
+                        <module>workoutplanner.ui/workoutplanner.ui.WorkoutPlannerApp</module>
+                        <runtimeImage>target/workoutplannerfx</runtimeImage>
+                        <javaOptions>
+                            <option>-Dfile.encoding=UTF-8</option>
+                        </javaOptions>
+                        <!-- linux options -->
+                        <linuxShortcut>true</linuxShortcut>
+                        <linuxMenuGroup>WorkoutplannerFX</linuxMenuGroup>
+
+                        <!-- windows options -->
+                        <winDirChooser>true</winDirChooser>
+                        <winShortcut>true</winShortcut>
+                        <winMenu>true</winMenu>
+                        <winMenuGroup>WorkoutplannerFX</winMenuGroup>
+                    </configuration>
+                </plugin>
             <plugin>
+
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
@@ -137,7 +147,9 @@
                 <configuration>
                     <argLine>
                         @{jaCoCoArgLine}
-                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens workoutplanner.ui/ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -162,23 +174,4 @@
             </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>remoteapp</id>
-                <build>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.openjfx</groupId>
-                            <artifactId>javafx-maven-plugin</artifactId>
-                            <version>0.0.8</version>
-                            <configuration>
-                                <!-- syntax: module-name/full-app-class-name -->
-                                <mainClass>workoutplanner.ui/workoutplanner.ui.WorkoutPlannerApp</mainClass>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </build>
-            <!--<id>headless</id>-->
-        </profile>
-    </profiles>
 </project>
